
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2008-02-07 GL  1.9.0  Add Drop/Reassign Owned support with a specific dialog.
2008-02-06 DP  1.9.0  Add options to the Edit Grid to allow sorting and 
                      filtering based on the selected cell [Robins Tharakan]
2008-02-04 DP  1.8.3  Allow non-superusers to debug their own functions.
2008-02-01 GL  1.8.3  Fix query that tries to apply the DB restriction.
2008-02-01 DP  1.8.3  Ensure info passed to Guru hints is HTML-safe.
2008-02-01 HS  1.8.2  Size of the column label of SQLGrid was made variable.
2008-01-30 DP  1.8.2  Prevent a crash when viewing databases with % in the 
                      name.
2008-01-23 DP  1.8.2  Don't try to force new databases into a specific
                      tablespace as this will error is non-superusers default
                      to pg_default.
2008-01-23 DP  1.8.2  Correct the SQL generation for EDB inline triggers.
2008-01-23 DP  1.8.2  Generate function signatures correctly if the first
                      parameters are OUT only. 
2008-01-18 DP  1.8.2  Remove the confusing and near-useless sequence combo box
                      from the column dialog per discussion on support list.
2008-01-18 DP  1.8.2  Fix the WITH ADMIN membership option when creating roles.
2008-01-16 DP  1.8.2  Refresh Views correctly on EnterpriseDB.
2008-01-14 DP  1.8.2  Fix the privilege editor on the Language dialogue, per
                      Bborie Park.
2008-01-10 DP  1.8.2  Correctly identify the schema of trigger functions that
                      are in system catalogs as can be the case with integrated
                      full text search.