@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-02-08 DP  1.8.3  Specify the length correctly when creating columns of 
+                      'time with time zone' and friends.
 2008-02-07 GL  1.9.0  Add Drop/Reassign Owned support with a specific dialog.
 2008-02-06 DP  1.9.0  Add options to the Edit Grid to allow sorting and 
                       filtering based on the selected cell [Robins Tharakan]
